# BlueLibre

./: CMakeLists.txt  CMakePresets.json  README-ANDROID-CI.md  README.md  README.txt  STOCK_BUILD.md  WORKFLOWS_README.md  airpods_models.cpp  clean_gradle_duplicates.sh  fix-android-apk.patch  intall.txt  linux.txt.txt  pr_body.md  pr_body_build.md  pr_body_detect.md  tools - Shortcut.lnk
.bluegithub/workflows/: Bluelibre_AiHelper.yml
.github/workflows/: AirysDark-AI_android.yml  AirysDark-AI_build.yml  AirysDark-AI_cmake.yml  AirysDark-AI_detector.yml  AirysDark-AI_linux.yml  AirysDark-AI_prob.yml  AirysDark-AI_prob_android.yml  AirysDark-AI_prob_cmake.yml  AirysDark-AI_prob_dotnet.yml  AirysDark-AI_prob_linux.yml  AirysDark-AI_prob_windows.yml  Android.yml  Bluelibre_AiHelper.yml  ai-autobuilder-android.yml  ai-autobuilder-cmake.yml  ai-autobuilder-linux.yml  ai-autobuilder-windows.yml  ai-autobuilder.yml  ai_review.yml  android.yml  bootstrap-ai.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/gradle/: libs.versions.toml
include/ble/: ble_backend.h  bluez_ble.h  winrt_ble.h
include/models/: airpods_models.h
packaging/: installer.nsi
src/ble/: bluez_ble.cpp
src/models/: winrt_ble.h
tools/: .ai_probe_touch  AirysDark-AI_Request.py  AirysDark-AI_android.py  AirysDark-AI_builder.py  AirysDark-AI_detector.py  AirysDark-AI_prob.py  AirysDark-AI_probe.py  ai_autobuilder.py  airysdark_ai_detected.json  airysdark_ai_detector_summary.txt  airysdark_ai_prob_report.json  airysdark_ai_scan.json  airysdark_ai_scan.md
(+10 files in other folders)
